v159
(xx/11/17)

Changes / Improvements / Optimizations:
General | Odroid XU3/4 images updated: Includes kernel support for EMMC 5.1 (thanks Meveric): https://github.com/Fourdee/DietPi/issues/1252
General | DietPi RPi kernel: Updated to 4.9.62.
General | DietPi RPi kernel: Will no longer re-install, if the current version is already at latest.
DietPi-Config | Tools > Benchmarks: Added ability to benchmark CPU performance using sysbench: https://github.com/Fourdee/DietPi/issues/1253#issuecomment-346441545
DietPi-Config | Time sync modes: NTP is now uninstalled when SystemD timedatectl is enabled. Reinstalled on demand. Timedatectl pool servers are now also set: https://github.com/Fourdee/DietPi/issues/1208#issuecomment-343762480
DietPi-Software | APT log: Moved to /etc/dietpi/logs/dietpi-software_apt.log, to prevent RAMlog clearing log during automated installations.
DietPi-Software | MPD (Stretch): Install updated to 0.20.11. Also supports native DSD playback (thanks to @sudeep and PJotr), when "Native" output freq/bit is set: https://github.com/Fourdee/DietPi/issues/1236
DietPi-Software | moOde: MPD now installed via pre-built binaries. Will reduce install time: https://github.com/Fourdee/DietPi/issues/1223#issuecomment-345265290
DietPi-Software | Nextcloud: Correct database access issue for MariaDB + minor fixes: https://github.com/Fourdee/DietPi/pull/1242
DietPi-Software | ownCloud: Installation fixed, respecting different distro repos: https://github.com/Fourdee/DietPi/pull/1243

Bug Fixes:
DietPi-Config | Nvidia driver: nouveau now disabled during install, fix for 750Ti and possibily other Nvidia chipsets (thanks dubyazero): https://github.com/Fourdee/DietPi/issues/1244
DietPi-Software | Redis: Minor un/installation/activation fixes of PHP module (Thanks to @MichaIng) : https://github.com/Fourdee/DietPi/pull/1249


Allo Web Interface v4: