@@ -307,7 +307,7 @@
 	# Backup System
 	#/////////////////////////////////////////////////////////////////////////////////////
 	RSYNC_MODE_TEXT=0
-	BACKUP_MODE=0 #0=system only, 1=full (system and userdata)
+	BACKUP_MODE=1 #0=system only, 1=full (system and userdata)
 
 	#LOGFILE
 	LOGFILE='/var/log/dietpi-backup.log'
