@@ -7878,19 +7878,6 @@ _EOF_
 
 			Banner_Installing
 
-			#Disable nouveau: https://github.com/Fourdee/DietPi/issues/1244
-			cat << _EOF_ > /etc/modprobe.d/blacklist-nouveau.conf
-blacklist nouveau
-blacklist lbm-nouveau
-options nouveau modeset=0
-alias nouveau off
-alias lbm-nouveau off
-_EOF_
-
-			echo -e "options nouveau modeset=0" | tee -a /etc/modprobe.d/nouveau-kms.conf
-
-			update-initramfs -u
-
 			#Install
 			AGI nvidia-driver nvidia-xconfig
 
@@ -13311,8 +13298,6 @@ _EOF_
 		elif (( $1 == 151 )); then
 
 			AGP nvidia-driver nvidia-xconfig libgl1-nvidia-glx:i386
-			rm /etc/modprobe.d/blacklist-nouveau.conf
-			sed -i '/^options nouveau modeset=0/d' /etc/modprobe.d/nouveau-kms.conf
 
 		elif (( $1 == 152 )); then
 
