@@ -2769,7 +2769,7 @@ _EOF_
 		#Reinstalls
 		#	Squeezelite / Shairport-sync
 		/DietPi/dietpi/dietpi-software reinstall 36 37
-		#-------------------------------------------------------------------------------	
+		#-------------------------------------------------------------------------------
 		#WiFi module disable powersave addition:
 		echo -e "options wlan_8192eu rtw_power_mgnt=0" > /etc/modprobe.d/wlan_8192eu.conf
 		#-------------------------------------------------------------------------------
@@ -2824,6 +2824,24 @@ _EOF_
 				whiptail --title "i-sabre-k2m" --msgbox "Due to a kernel update, this driver must be reinstalled, however, this can only be completed after the system is rebooted.\n\nOnce the system reboots:\n - use DietPi-Config to select soundcard 'none'\n - then reselect 'i-sabre-k2m'\n - Reboot system" 14 70
 
 			fi
+
+		fi
+		#-------------------------------------------------------------------------------
+		#x86_64, blacklist by nouveau default, prefer Nvidia driver installer
+		#	Disable nouveau: https://github.com/Fourdee/DietPi/issues/1244 // http://dietpi.com/phpbb/viewtopic.php?f=11&t=2462&p=9688#p9688
+		if (( $HW_ARCH == 10 )); then
+
+			cat << _EOF_ > /etc/modprobe.d/blacklist-nouveau.conf
+blacklist nouveau
+blacklist lbm-nouveau
+options nouveau modeset=0
+alias nouveau off
+alias lbm-nouveau off
+_EOF_
+
+			echo -e "options nouveau modeset=0" > /etc/modprobe.d/nouveau-kms.conf
+
+			update-initramfs -u
 
 		fi
 		#-------------------------------------------------------------------------------
